footer and logo update

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-icons": "^5.2.1",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
+    "styled-components": "^6.1.12",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
